force-app/main/default/objects/Integration_Salesforce_Id_Queue__c/Integration_Salesforce_Id_Queue__c.object-meta.xml
<CustomObject>
    <description>Object holding Salesforce Guest (Person Account) record ids where the Id has to be sent to the Integration Layer. Records are created when a Guest record is successfully created and has been sent to the Integration Layer.</description>
    <label>Integration Salesforce Id Queue</label>
    <nameField>
        <label>Integration Salesforce Id Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Salesforce Id Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>