force-app/main/default/objects/Integration_Salesforce_Id_Queue__c/fields/Customer_GUID__c.field-meta.xml
<CustomField>
    <fullName>Customer_GUID__c</fullName>
    <description>The customer GUID held in the Integration Layer and returned to Salesforce upon successful record creation.</description>
    <inlineHelpText>The customer GUID held in the Integration Layer and returned to Salesforce upon successful record creation.</inlineHelpText>
    <label>Customer GUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>