force-app/main/default/objects/Integration_Salesforce_Id_Queue__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <description>Field to store any Error details where the API update call has failed.</description>
    <inlineHelpText>Field to store any Error details where the API update call has failed.</inlineHelpText>
    <label>Error Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>