force-app/main/default/objects/Integration_Salesforce_Id_Queue__c/fields/Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id__c</fullName>
    <description>The row id of the Guest (Person Account) record</description>
    <inlineHelpText>The row id of the Guest (Person Account) record</inlineHelpText>
    <label>Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>