force-app/main/default/objects/Integration_Salesforce_Id_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Salesforce_Id__c</columns>
    <columns>Customer_GUID__c</columns>
    <columns>Error_Details__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>